--- a/CreateVector-lambda/package.json
+++ b/CreateVector-lambda/package.json
@@ -2,6 +2,7 @@
   "name": "createvector-lambda",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,11 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tensorflow/tfjs-node": "^4.7.0",
-    "@types/node": "^20.3.1",
-    "@types/request": "^2.48.8",
-    "aws-lambda": "^1.0.7",
-    "request": "^2.88.2",
-    "typescript": "^5.1.3"
+    "@tensorflow/tfjs-node": "^4.8.0"
   }
 }
